<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student Pro Guidance</string>
    <string name="login">Login</string>
    <string name="enter">Log in to Facebook</string>
    <string name="fb">Facebook</string>
    <string name="txtSem">Semester</string>
    <string name="txtStart">Pick Start Date</string>
    <string name="txtEnd">Pick End Date</string>
    <string name="academic">Academic</string>
    <string name="alarm">Alarm</string>
    <string name="holiday">Holiday</string>
    <string name="assignment">Assignment</string>
    <string name="revision">Revision</string>
    <string name="results">Results</string>
    <string name="subjects">Subjects</string>
    <string name="event">Event</string>
    <string name="test">Test</string>
    <string name="_class">Class</string>
    <string name="semProfile">Semester Profile</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="once">One Day</string>
    <string name="duration">Duration</string>
    <string name="pickOneDate">Pick A Date</string>
    <string name="pickOneTime">Pick A Time</string>
    <string name="date">Date</string>
    <string name="finish">Finish</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="credit">Credit</string>
    <string name="duedate">Due Date</string>
    <string name="duetime">Due Time</string>
    <string name="time">Time</string>
    <string name="welcome">Welcome</string>
    <string name="mainmenu">Main Menu</string>
    <string name="next">>></string>
    <string name="prev">&lt;&lt;</string>
    <string name="description">Description</string>
    <string name="talkUL">Please Choose the Semester Record</string>
    <string name="totalChapter">Total Chapter</string>
    <string name="classarrangement">Class Arrangement</string>
    <string name="weekday">Day of Week</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="send">Send</string>
    <string name="addsemtalk">Add New Semester Here</string>
    <string name="update">Update</string>
    <string name="classschedule">Class Schedule</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="calendar">Calendar</string>
    <string name="calculate">Calculate</string>

    <string-array name="weekdaysitem">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="abbrev">Abbreviation</string>
    <string name="chapter">Chapter</string>
    <string name="lecturer">Lecturer</string>
    <string name="submit">Submit</string>
    <string name="contactM">Contact(Mobile)</string>
    <string name="contactO">Contact(Office)</string>
    <string name="email">Email</string>
    <string name="venue">Venue</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="target">Target</string>
    <string name="currentholdmark">Current Hold Mark</string>
    <string name="view">View</string>
    <string name="gsetting">GradeSetting</string>
    <string name="overall">Overall</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="save">Save</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="talkGS">Please state the minimum marks for each grade.</string>
    <string name="percentage">Percentage(%)</string>
    <string name="marks">Marks</string>
    <string name="timetable">Time Table</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="day">Day</string>
    <string name="maxClassTalk">Maximum Class Per Day</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="endtime">End Time</string>
    <string name="begintime">Begin Time</string>
    <string name="index">Index</string>
    <string name="apply">Apply</string>
    <string name="refresh">Refresh</string>
    <string name="schooldays">Schooldays</string>
    <string name="schoolassignment">School &amp; Assignments</string>
    <string name="schooltest">Schoolday &amp; Test</string>
    <string name="assignmenttest">Assignment &amp; Test</string>
    <string name="all">All</string>
    <string name="over">over</string>
    <string name="color">color</string>
    <string name="na">N/A</string>
    <string name="reminder">Reminder</string>
    <string name="off">Off</string>
    <string name="semester_on">Semester Schoolday</string>
    <string name="class_assignment">Class &amp; Assignment</string>
    <string name="test_class">Test &amp; Class</string>
    <string name="test_assignment">Test &amp; Assignment</string>
    <string name="test_class_assignment">Test &amp; Class &amp; Assignment</string>
    <string name="search">Search</string>
    <string name="classday">Class Days</string>
    <string name="choose">Choose</string>
    <string name="help">Help</string>

</resources>