<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iconView_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/academic"
            android:src="@drawable/ic_academic_52" />

        <TextView
            android:id="@+id/lblAcademic_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/academic"
            android:textColor="@drawable/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider2_white" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp" >

            <TextView
                android:id="@+id/lblSemester_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:text="@string/txtSem"
                android:textColor="@drawable/white" />

            <EditText
                android:id="@+id/txtSemester_A"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@drawable/black" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="50dp" >

            <TextView
                android:id="@+id/lblStartDate_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:text="@string/startdate"
                android:textColor="@drawable/white" />

            <Button
                android:id="@+id/btnSemStartDate_A"
                android:layout_width="128dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_background_long"
                android:text="@string/txtStart"
                android:textColor="@drawable/black" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="50dp" >

            <TextView
                android:id="@+id/lblEndDate_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:text="@string/enddate"
                android:textColor="@drawable/white" />

            <Button
                android:id="@+id/btnSemEndDate_A"
                android:layout_width="128dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_background_long"
                android:text="@string/txtEnd"
                android:textColor="@drawable/black" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="50dp" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="24dp"
                android:text="@string/classday"
                android:textColor="@drawable/white" />

            <Button
                android:id="@+id/btnChoose_A"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/button_background"
                android:contentDescription="@string/add"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/choose" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="50dp" >

            <TextView
                android:id="@+id/lblHoliday_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="24dp"
                android:text="@string/holiday"
                android:textColor="@drawable/white" />

            <ImageButton
                android:id="@+id/btnAddHoliday_A"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/button_background"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_add_32" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingLeft="50dp" >

            <Button
                android:id="@+id/btnSubmit_A"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginLeft="70dp"
                android:background="@drawable/button_background"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/submit"
                android:textColor="@drawable/black" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>