<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iconView_AS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/academic"
            android:src="@drawable/ic_alarm" />

        <TextView
            android:id="@+id/lblAssignment_AS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/alarm"
            android:textColor="@drawable/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/divider2_white" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp" >

            <TextView
                android:id="@+id/lblSubjects_AS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:text="@string/subjects"
                android:textColor="@drawable/white"
                android:textSize="16dp" />

            <Spinner
                android:id="@+id/spinSubjects_AS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp" >

            <TextView
                android:id="@+id/lblDueDate_AS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="23dp"
                android:text="@string/duedate"
                android:textColor="@drawable/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnDueDate_AS"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="30dp"
                android:layout_weight="0.10"
                android:background="@drawable/button_background_long"
                android:text="@string/pickOneDate"
                android:textColor="@drawable/black" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp" >

            <TextView
                android:id="@+id/lblDueTime_AS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:text="@string/duetime"
                android:textColor="@drawable/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnDueTime_AS"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="30dp"
                android:layout_weight="0.10"
                android:background="@drawable/button_background_long"
                android:text="@string/pickOneTime"
                android:textColor="@drawable/black" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="30dp" >

            <Button
                android:id="@+id/btnSubmit_AS"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginLeft="80dp"
                android:background="@drawable/button_background"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/submit"
                android:textColor="@drawable/black" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>