<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iconView_CTT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/holiday"
            android:src="@drawable/ic_class_48" />

        <TextView
            android:id="@+id/lblTimeTable_CTT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/timetable"
            android:textColor="@drawable/white"
            android:textSize="20dp" />

        <ImageButton
            android:id="@+id/btnSetting_CTT"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/add"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/ic_setting_32" />

        <Button
            android:id="@+id/btnView_CTT"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_background"
            android:text="@string/view" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <GridView
            android:id="@+id/gridView_CTT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numColumns="6"
            android:stretchMode="columnWidth" >

            <!-- Preview: listitem=@android:layout/simple_list_item_2 -->
        </GridView>
    </LinearLayout>

</LinearLayout>