<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iconView_H"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/holiday"
            android:src="@drawable/ic_holiday_52" />

        <TextView
            android:id="@+id/lblHoliday_H"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/holiday"
            android:textColor="@drawable/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/divider2_white" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp" >

            <TextView
                android:id="@+id/lblTitle_H"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:text="@string/title"
                android:textColor="@drawable/white" />

            <EditText
                android:id="@+id/txtTitle_H"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.13"
                android:inputType="text"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rgHolType_H"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textColor="@drawable/white" >

            <RadioButton
                android:id="@+id/rbOnce_H"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/once"
                android:textColor="@drawable/white" />

            <RadioButton
                android:id="@+id/rbDuration_H"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textColor="@drawable/white" />
        </RadioGroup>

        <ViewSwitcher
            android:id="@+id/switcher_H"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:animateFirstView="true"
            android:gravity="center_horizontal"
            android:textColor="@drawable/black" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp" >

                <TextView
                    android:id="@+id/lblDate_H"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:paddingRight="3dp"
                    android:text="@string/date"
                    android:textColor="@drawable/white" />

                <Button
                    android:id="@+id/btnPickOneDate_H"
                    android:layout_width="128dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_background_long"
                    android:text="@string/pickOneDate"
                    android:textColor="@drawable/black" />
            </LinearLayout>

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="50dp" >

                <TextView
                    android:id="@+id/lblStartDate_H"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="false"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="5dp"
                    android:paddingRight="3dp"
                    android:text="@string/startdate"
                    android:textColor="@drawable/white" />

                <Button
                    android:id="@+id/btnPickDuraStartDate_H"
                    android:layout_width="128dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="false"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@id/lblStartDate_H"
                    android:background="@drawable/button_background_long"
                    android:text="@string/txtStart"
                    android:textColor="@drawable/black" />

                <TextView
                    android:id="@+id/lblEndDate_H"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/btnPickDuraStartDate_H"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:paddingRight="3dp"
                    android:text="@string/enddate"
                    android:textColor="@drawable/white" />

                <Button
                    android:id="@+id/btnPickDuraEndDate_H"
                    android:layout_width="128dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="false"
                    android:layout_below="@id/btnPickDuraStartDate_H"
                    android:layout_toRightOf="@id/lblEndDate_H"
                    android:background="@drawable/button_background_long"
                    android:text="@string/txtEnd"
                    android:textColor="@drawable/black" />
            </RelativeLayout>
        </ViewSwitcher>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textColor="@drawable/black" >

            <Button
                android:id="@+id/btnAdd_H"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/button_background"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/submit"
                android:textColor="@drawable/black" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>