<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:cacheColorHint="@android:color/transparent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingRight="10dp" >

    <TextView
        android:id="@+id/lblInfo_CLR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:paddingLeft="20dp"
        android:text="@string/title"
        android:textColor="@drawable/white"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/alarm_CLR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/alarm"
        android:src="@drawable/ic_alarm"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/btnDelete_CLR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:background="@drawable/white"
        android:contentDescription="@string/delete"
        android:padding="5dp"
        android:src="@drawable/ic_delete_22" />

</RelativeLayout>